webApiExRateProvider 에서만 ioException 처리되도록 수정